- ADD: Added set size and timeseries flag to traits/phenotypes.